--- a/scoresplit_gui/package.json
+++ b/scoresplit_gui/package.json
@@ -13,6 +13,7 @@
     "@chakra-ui/react": "^3.2.1",
     "@emotion/react": "^11.13.5",
     "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-dialog": "^2.0.1",
     "@tauri-apps/plugin-shell": "^2",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
