--- a/scoresplit_gui/src-tauri/Cargo.toml
+++ b/scoresplit_gui/src-tauri/Cargo.toml
@@ -23,3 +23,4 @@ tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 scoresplit_core = { path = "../../scoresplit_core" }
+tauri-plugin-dialog = "2"
