--- a/scoresplit_core/Cargo.toml
+++ b/scoresplit_core/Cargo.toml
@@ -6,5 +6,10 @@ edition = "2021"
 [dependencies]
 opencv = "0.93.4"
 
+ocrs = "0.7.0"
+rayon = "1.10.0"
+rten = "0.9.0"
+rten-imageproc = "0.10.0"
+rten-tensor = "0.10.0"
 base64 = "0.22.1"
 anyhow = "1.0"
